# hud-housing-tracker

./: .gitignore  CLAUDE.md  PROBLEMS.md  Procfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: hud_housing.db-shm
docs/: methodology.md
outreach/: research_notes.md  targets.json
outreach/email_templates/: client_pitch.md  media_pitch.md  researcher_pitch.md
outreach/pitch_materials/: one_pager.md  sample_data.md
src/: cli.py
src/dashboard/: app.py
src/export/: exporter.py
src/normalization/: addresses.py  cross_linker.py
src/scrapers/: lihtc.py  multifamily.py
src/storage/: database.py
src/validation/: quality.py
tests/: test_addresses.py  test_cli.py  test_cross_linker.py  test_database.py  test_exports.py  test_lihtc.py  test_multifamily.py  test_quality.py
